--- a/static/style.css
+++ b/static/style.css
@@ -92,3 +92,15 @@ button {
 .resume li {
   list-style-type: none;
 }
+
+dl {
+  display: grid;
+}
+
+.stats dt {
+  grid-row: 1;
+}
+
+.stats dd {
+  grid-row: 2;
+}
